cabal-version:      3.6
build-type:         Simple
name:               customer-deposit-wallet
version:            0.2024.8.11
synopsis:           A wallet for the Cardano blockchain.
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/cardano-wallet
license:            Apache-2.0
license-file:       LICENSE
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2023 Cardano Foundation
category:           Web
data-files:         data/swagger.json

extra-source-files:
  spec/**/*.lagda.md
  spec/**/*.lhs.md
  spec/**/*.openapi.yaml

common language
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat
    -Wredundant-constraints
    -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  src
  build-depends:
    , async
    , base
    , bytestring
    , cardano-crypto
    , cardano-wallet:cardano-wallet
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read == 0.2024.8.27
    , cardano-ledger-byron
    , containers
    , contra-tracer
    , customer-deposit-wallet-pure
    , delta-store
    , delta-table
    , delta-types
    , io-classes
    , iohk-monitoring-extra
    , OddWord
    , sqlite-simple
    , text
    , transformers
    , time
    , cardano-ledger-api
    , cardano-strict-containers
    , microlens
  exposed-modules:
    Cardano.Wallet.Deposit.IO
    Cardano.Wallet.Deposit.IO.DB
    Cardano.Wallet.Deposit.IO.Network.Mock
    Cardano.Wallet.Deposit.IO.Network.Type
    Cardano.Wallet.Deposit.Pure
    Cardano.Wallet.Deposit.Pure.Balance
    Cardano.Wallet.Deposit.Pure.UTxO
    Cardano.Wallet.Deposit.Pure.UTxOHistory
    Cardano.Wallet.Deposit.Pure.Submissions
    Cardano.Wallet.Deposit.Read
    Cardano.Wallet.Deposit.Write

test-suite scenario
  import:             language, opts-exe
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/scenario
  main-is:            test-suite-scenario.hs
  build-tool-depends:
    markdown-unlit:markdown-unlit
  ghc-options:
    -pgmL markdown-unlit
  build-depends:
    , base
    , bytestring
    , cardano-crypto
    , cardano-wallet-test-utils
    , containers
    , contra-tracer
    , customer-deposit-wallet
    , delta-store
    , hspec >=2.8.2
  other-modules:
    Test.Scenario.Blockchain
    Test.Scenario.Wallet.Deposit.Exchanges
    Test.Scenario.Wallet.Deposit.Run

library customer-deposit-wallet-http
  import:          language, opts-lib
  hs-source-dirs:  http
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , customer-deposit-wallet
    , http-media
    , insert-ordered-containers
    , lens
    , memory
    , openapi3
    , servant
    , servant-server
    , text
    , text-class
    , warp
  exposed-modules:
    Cardano.Wallet.Deposit.HTTP
    Cardano.Wallet.Deposit.HTTP.Endpoints
    Cardano.Wallet.Deposit.HTTP.Implementation
    Cardano.Wallet.Deposit.HTTP.Types.API
    Cardano.Wallet.Deposit.HTTP.Types.JSON
    Cardano.Wallet.Deposit.HTTP.Types.JSON.Encoding
    Cardano.Wallet.Deposit.HTTP.Types.OpenAPI

test-suite unit
  import:             language, opts-exe
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            test-suite-unit.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , cardano-crypto
    , cardano-wallet:cardano-wallet
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , customer-deposit-wallet:{customer-deposit-wallet, customer-deposit-wallet-http}
    , directory
    , hspec >=2.8.2
    , hspec-golden
    , openapi3
    , QuickCheck
    , with-utf8
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Cardano.Wallet.Deposit.HTTP.JSON.JSONSpec
    Cardano.Wallet.Deposit.HTTP.OpenAPISpec
    Cardano.Wallet.Deposit.PureSpec
    Paths_customer_deposit_wallet
    Spec

executable customer-deposit-wallet
  import:         language, opts-exe
  hs-source-dirs: exe
  build-depends:
    , base
  main-is:
    customer-deposit-wallet.hs
