cabal-version:      3.6
build-type:         Simple
name:               customer-deposit-wallet
version:            0.2024.9.27
synopsis:           A wallet for the Cardano blockchain.
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/cardano-wallet
license:            Apache-2.0
license-file:       LICENSE
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2023 Cardano Foundation
category:           Web
data-files:         data/swagger.json
extra-source-files:
  spec/**/*.lagda.md
  spec/**/*.lhs.md
  spec/**/*.openapi.yaml

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wunused-imports -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

common no-delta-table-on-windows
  if !os(windows)
    build-depends: delta-table
    other-modules: Cardano.Wallet.Deposit.IO.DB.Real

  else
    other-modules: Cardano.Wallet.Deposit.IO.DB.Stub

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:             language, opts-lib, no-delta-table-on-windows
  hs-source-dirs:     src
  build-depends:
    , async
    , base
    , bytestring
    , cardano-crypto
    , cardano-ledger-api
    , cardano-ledger-byron
    , cardano-strict-containers
    , cardano-wallet
    , cardano-wallet-network-layer
    , cardano-wallet-read           ==0.2024.8.27
    , containers
    , contra-tracer
    , customer-deposit-wallet-pure
    , delta-store
    , delta-types
    , io-classes
    , microlens
    , mtl
    , OddWord
    , text

  reexported-modules: Cardano.Wallet.Address.BIP32
  exposed-modules:
    Cardano.Wallet.Deposit.IO
    Cardano.Wallet.Deposit.IO.DB
    Cardano.Wallet.Deposit.IO.Network.Mock
    Cardano.Wallet.Deposit.IO.Network.Type
    Cardano.Wallet.Deposit.IO.Resource
    Cardano.Wallet.Deposit.IO.Resource.Event
    Cardano.Wallet.Deposit.Pure
    Cardano.Wallet.Deposit.Pure.Balance
    Cardano.Wallet.Deposit.Pure.Submissions
    Cardano.Wallet.Deposit.Pure.UTxO
    Cardano.Wallet.Deposit.Read
    Cardano.Wallet.Deposit.Write

test-suite scenario
  import:             language, opts-exe
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/scenario
  main-is:            test-suite-scenario.hs
  build-tool-depends: markdown-unlit:markdown-unlit
  ghc-options:        -pgmL markdown-unlit
  build-depends:
    , base
    , bytestring
    , cardano-crypto
    , cardano-wallet-test-utils
    , containers
    , contra-tracer
    , customer-deposit-wallet
    , delta-store
    , hspec                      >=2.8.2

  other-modules:
    Test.Scenario.Blockchain
    Test.Scenario.Wallet.Deposit.Exchanges
    Test.Scenario.Wallet.Deposit.Run

library http
  import:          language, opts-lib
  visibility:      public
  hs-source-dirs:  http
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , cardano-wallet-read
    , contra-tracer
    , customer-deposit-wallet
    , customer-deposit-wallet:rest
    , http-media
    , insert-ordered-containers
    , lens
    , memory
    , openapi3
    , servant
    , servant-server
    , text
    , text-class

  exposed-modules:
    Cardano.Wallet.Deposit.HTTP.Server
    Cardano.Wallet.Deposit.HTTP.Types.API
    Cardano.Wallet.Deposit.HTTP.Types.JSON
    Cardano.Wallet.Deposit.HTTP.Types.JSON.Encoding
    Cardano.Wallet.Deposit.HTTP.Types.OpenAPI

library rest
  import:          language, opts-lib
  visibility:      public
  hs-source-dirs:  rest
  build-depends:
    , base
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , containers
    , contra-tracer
    , crypto-primitives
    , customer-deposit-wallet
    , delta-store
    , directory
    , filepath
    , memory
    , serialise
    , servant-server
    , text
    , transformers

  exposed-modules:
    Cardano.Wallet.Deposit.REST
    Cardano.Wallet.Deposit.REST.Catch
    Cardano.Wallet.Deposit.REST.Start
    Cardano.Wallet.Deposit.REST.Wallet.Create

test-suite unit
  import:             language, opts-exe
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            test-suite-unit.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , cardano-crypto
    , cardano-wallet-read
    , cardano-wallet-test-utils
    , contra-tracer
    , customer-deposit-wallet
    , customer-deposit-wallet:http
    , customer-deposit-wallet:rest
    , directory
    , hspec
    , hspec-golden
    , openapi3
    , QuickCheck
    , temporary
    , with-utf8

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Cardano.Wallet.Deposit.HTTP.JSON.JSONSpec
    Cardano.Wallet.Deposit.HTTP.OpenAPISpec
    Cardano.Wallet.Deposit.RESTSpec
    Paths_customer_deposit_wallet
    Spec

executable customer-deposit-wallet
  import:         language, opts-exe
  hs-source-dirs: exe
  build-depends:  base
  main-is:        customer-deposit-wallet.hs
