name:                delta-store
version:             0.1.0.0
synopsis:            Facility for storing a Haskell value, using delta types.
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2021 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options:
      -Werror
  build-depends:
      base
    , containers
    , delta-types
    , exceptions
    , fmt
    , io-classes
    , QuickCheck
    , safe-exceptions
    , semigroupoids
    , stm
    , text
    , transformers
  hs-source-dirs:
      src
  exposed-modules:
      Data.DBVar
      Data.Store
      Data.QueryStore
      Test.Store

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , io-classes
    , io-sim
    , hspec
    , QuickCheck
    , fmt
    , delta-store
    , delta-types
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Data.StoreSpec
