name:                delta-table
version:             0.1.0.0
synopsis:            Work with database tables using delta encodings.
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2023 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options:
      -Werror
  build-depends:
      base
    , conduit
    , containers
    , dbvar
    , exceptions
    , fmt
    , generic-lens
    , io-classes
    , monad-logger
    , persistent
    , persistent-sqlite
    , QuickCheck
    , safe
    , safe-exceptions
    , say
    , semigroupoids
    , stm
    , text
    , transformers
  hs-source-dirs:
      src
  exposed-modules:
      Data.Chain
      Data.Table
      Database.Persist.Delta
      Database.Schema
  other-modules:
      Demo.Database

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , io-classes
    , io-sim
    , hspec
    , QuickCheck
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
