cabal-version:      3.6
build-type:         Simple
name:               delta-table
version:            0.2025.12.15
synopsis:           Work with database tables using delta types.
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/cardano-wallet
license:            Apache-2.0
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2023-2024 Cardano Foundation
category:           Database
extra-source-files: README.md

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  src
  build-depends:
    , base
    , bytestring
    , containers
    , delta-store
    , delta-types
    , io-classes     >=1.5.0.0 && <1.9
    , Only           ==0.1
    , sqlite-simple
    , text
    , transformers

  hs-source-dirs:  src
  exposed-modules:
    Data.Table
    Database.Table
    Database.Table.SQLite.Simple
    Demo.Database

  other-modules:
    Database.Table.Schema
    Database.Table.SQL.Column
    Database.Table.SQL.Expr
    Database.Table.SQL.Stmt
    Database.Table.SQL.Table
    Database.Table.SQL.Var
    Database.Table.SQLite.Simple.Exec
    Database.Table.SQLite.Simple.Monad

test-suite unit
  import:             language, opts-exe
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            Main.hs
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , hspec
