name:                delta-types
version:             0.1.0.0
synopsis:            Delta types, also known as change actions.
homepage:            https://github.com/cardano-foundation/cardano-wallet
author:              Cardano Foundation (High Assurance Lab)
maintainer:          hal@cardanofoundation.org
copyright:           2021 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options:
      -Werror
  build-depends:
      base
    , containers
    , fmt
    , QuickCheck
    , semigroupoids
    , text
  hs-source-dirs:
      src
  exposed-modules:
      Data.Delta
      Data.DeltaMap

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , hspec
    , QuickCheck
    , fmt
    , delta-types
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Data.DeltaSpec
