cabal-version:       2.2
name:                delta-types
version:             0.1.0.0
synopsis:            Delta types, also known as change actions.
description:
    A __delta type__ @da@ for a __base type__ @a@ is a collection
    of values, each of which corresponds to a change @a → a@ of the base type.
    .
    See also
    .
    * [Delta encodings help separate business logic from database operations](https://bobkonf.de/2023/apfelmus.html)
    .
    * [Fixing Incremental Computation: Derivatives of Fixpoints, and the Recursive Semantics of Datalog](http://arxiv.org/abs/1811.06069)
      (Here, the concept of a delta type is called a __change action__.)
homepage:            https://github.com/cardano-foundation/cardano-wallet
author:              Cardano Foundation (High Assurance Lab)
maintainer:          hal@cardanofoundation.org
copyright:           2021-2023 IOHK, 2024 Cardano Foundation
license:             Apache-2.0
category:            Data Structures
build-type:          Simple
extra-source-files:
    README.md

common language
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
  other-extensions:
    BangPatterns
    FlexibleContexts
    GADTs
    NamedFieldPuns
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances

common opts-lib
  ghc-options:
    -Wall -Wcompat
    -Wredundant-constraints
    -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:           language, opts-lib
  hs-source-dirs:   src
  build-depends:
    , base
    , containers
    , fmt
    , semigroupoids
  exposed-modules:
    Data.Delta
    Data.Delta.Core
    Data.Delta.Embedding
    Data.Delta.List
    Data.Delta.Set
    Data.DeltaMap

test-suite unit
  import:           language, opts-exe
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/unit
  main-is:          Main.hs
  build-depends:
    , base
    , hspec
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Data.DeltaSpec
