cabal-version:   3.4
name:            cardano-wallet-exe
version:         2024.7.27
synopsis:        cardano-wallet executable

-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          hal team
maintainer:      hf@cardanofoundation.org

-- copyright:
category:        Crypto
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
common opts-exe
  ghc-options: -threaded -rtsopts -Wall -Wredundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

executable cardano-wallet
  import:           language, opts-exe
  main-is:          cardano-wallet.hs

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.18.2.0
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , contra-tracer
    , iohk-monitoring
    , iohk-monitoring-extra
    , lobemo-backend-ekg
    , network-uri
    , optparse-applicative
    , text
    , text-class
    , transformers
    , unliftio
    , with-utf8
