cabal-version:   3.4
name:            cardano-wallet-exe
version:         2024.8.19
synopsis:        cardano-wallet executable

-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          hal team
maintainer:      hf@cardanofoundation.org

-- copyright:
category:        Crypto
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-exe
  ghc-options:
    -threaded -rtsopts -Wall -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

executable cardano-wallet
  import:           language, opts-exe
  main-is:          cardano-wallet.hs

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.18.2.0
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-exe
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , contra-tracer
    , iohk-monitoring
    , iohk-monitoring-extra
    , lobemo-backend-ekg
    , network-uri
    , optparse-applicative
    , text
    , text-class
    , transformers
    , unliftio
    , with-utf8

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , address-derivation-discovery
    , aeson
    , aeson-pretty
    , ansi-terminal
    , base
    , bytestring
    , cardano-addresses
    , cardano-addresses-cli
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-secrets
    , cardano-wallet-ui
    , contra-tracer
    , data-default
    , directory
    , extra
    , file-embed
    , filepath
    , fmt
    , generic-lens
    , http-client
    , iohk-monitoring
    , iohk-monitoring-extra
    , network
    , network-uri
    , ntp-client
    , optparse-applicative
    , servant-client
    , servant-client-core
    , servant-server
    , streaming-commons
    , template-haskell
    , text
    , text-class
    , time
    , tls
    , transformers
    , unliftio
    , wai-middleware-logging
    , warp
    , warp-tls
    , Win32-network
    , x509
    , x509-store
    , x509-validation

  exposed-modules:
    Cardano.Wallet.Application
    Cardano.Wallet.Application.CLI
    Cardano.Wallet.Application.Logging
    Cardano.Wallet.Application.Server
    Cardano.Wallet.Application.Tls
    Cardano.Wallet.Application.Tracers
    Cardano.Wallet.Application.Version
    Cardano.Wallet.Application.Version.TH

  other-modules:   Paths_cardano_wallet_exe
